theme.css
@import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css);

/* Win Phone 8.1 + fix */
@-ms-viewport       { width: device-width; }

/* hide jQM loading text */
.ui-loader { display: none; }

/* Main */
html, body {
  height: 100%;
}
.col-centered {
 float: none;
 margin: 0 auto;
}

.col-inner .caption p { margin: 0 0; }
.col-inner .caption p.description { margin-top: 10px; }

/* Jumbotron */
@media (max-width: 767px) {
  .jumbotron p { font-size: 16px; }
  .jumbotron h1 { font-size: 28px; }
}


/* Navigation */
.navbar-secondary {
   /* enable accel on affix navbar (avoids affix delay on iOS */
  -webkit-transform: translate3d(0, 0, 0);
  transform: translate3d(0, 0, 0);
}
@media (max-width: 460px) {
  .navbar-secondary .navbar-brand {
    width: 80%;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
  }
}

.affix {
  top: 0px;
  width: 100%;
}
.navbar {
  width: 100%;
}
.navbar-toggle {
  float: right;
  vertical-align: middle;
}
.navbar-main { z-index: 104; }
.navbar-secondary { z-index: 103; }
@media (min-width: 992px) {
  .navbar {
    left: auto;
  }
}
.navmenu {
   overflow: visible;
   width: 60px;
   padding-top: 55px;
   z-index: 102;
   font-size: 20px;
   border: none;
   box-shadow: 0 6px 10px 0 rgba(0, 0, 0, .14), 0 1px 18px 0 rgba(0, 0, 0, .12), 0 3px 5px -1px rgba(0, 0, 0, .2);
}
.canvas {
  position: relative;
  left: 0;
  z-index: 101;
}

.nav-wrapper { height: 50px; }
#thePicturePage #content-spacer { padding-top: 80px; }
#theCategoryPage #content-spacer { padding-top: 20px; }
#theCategoryPage { padding-left: 0px !important; }

/* Category thumbnails */
@media (max-width: 767px) {
  #content .col-inner {
    max-width: 520px;
    float: none;
    margin: 0 auto;
  }
  #content .col-inner .col-thumbnail div[class^=placeholder] {
    width: 100%;
    height: auto;
  }
  #content .col-inner .col-thumbnail div[class^=placeholder] img {
    width: 100%;
    height: auto;
  }
}
.content-grid .col-inner .caption h4.title {
  position: relative;
}
.content-grid .col-inner .caption h4.title a.recent {
  padding-right: 16px;
}
.content-grid .col-inner .caption h4.title img {
  position: absolute;
  top: 2px;
  right: 0;
}

/* Rating */
#rating .rateButtonStarFull {
  position: relative;
  top: 1px;
  display: inline-block;
  font-family: 'Glyphicons Halflings';
  font-style: normal;
  font-weight: normal;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  cursor: pointer;
}
#rating .rateButtonStarFull:before {
  content: "\e006";
}
#rating .rateButtonStarEmpty {
  position: relative;
  top: 1px;
  display: inline-block;
  font-family: 'Glyphicons Halflings';
  font-style: normal;
  font-weight: normal;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  cursor: pointer;
}
#rating .rateButtonStarEmpty:before {
  content: "\e007";
}


/* Info tabs */
.tab-pane { margin: 0 10px; }
@media (min-width: 768px) {
  #infopanel .dl-horizontal dt {
      width: 220px;
  }
  .dl-horizontal dd {
      margin-left: 240px;
  }
}

/* Slick Carousel */
#thumbnailCarousel {
  display: none; /* hide initially until page is loaded */
  padding-top: 1em;
  padding-bottom: 1.5em;
}
.slick-slide img { display: inherit !important; }
.slick-slide, .slick-slide *{ outline: none !important; }
.slick-list { padding: 10px 0 !important; }

/* Bootstrap carousel fading animation */
/* the fading animation */
.carousel-fade .carousel-inner .item {
  opacity: 0;
  transition-property: opacity;
}
.carousel-fade .carousel-inner .active {
  opacity: 1;
}
.carousel-fade .carousel-inner .active.left,
.carousel-fade .carousel-inner .active.right {
  left: 0;
  opacity: 0;
  z-index: 1;
}
.carousel-fade .carousel-inner .next.left,
.carousel-fade .carousel-inner .prev.right {
  opacity: 1;
}
.carousel-fade .carousel-control {
  z-index: 2;
}
@media all and (transform-3d), (-webkit-transform-3d) {
    .carousel-fade .carousel-inner > .item.next,
    .carousel-fade .carousel-inner > .item.active.right {
      opacity: 0;
      -webkit-transform: translate3d(0, 0, 0);
              transform: translate3d(0, 0, 0);
    }
    .carousel-fade .carousel-inner > .item.prev,
    .carousel-fade .carousel-inner > .item.active.left {
      opacity: 0;
      -webkit-transform: translate3d(0, 0, 0);
              transform: translate3d(0, 0, 0);
    }
    .carousel-fade .carousel-inner > .item.next.left,
    .carousel-fade .carousel-inner > .item.prev.right,
    .carousel-fade .carousel-inner > .item.active {
      opacity: 1;
      -webkit-transform: translate3d(0, 0, 0);
              transform: translate3d(0, 0, 0);
    }
}

/* Shadows */
#theImage {
  padding-bottom: 1em;
}
.placeholder>img,
#theImage>img,
#theImage #video-modal>.embed-responsive,
.slick-slide>a>img,
.col-thumbnail>div>img {
  box-shadow: 0 6px 10px 0 rgba(0, 0, 0, .14), 0 1px 18px 0 rgba(0, 0, 0, .12), 0 3px 5px -1px rgba(0, 0, 0, .2);
}
.thumbnail-active>a>img {
  border: 1px solid white;
}

/* Calendar */
#calendar-select {
  margin-bottom: 10px;
}
#calendar-nav {
  min-height: 55px;
  text-align: center;
}
#calendar-nav>a {
  margin-bottom: 10px;
}
#calendar-nav-buttons table {
  padding-top: 10px;
}
#calendar-nav-buttons td,
#calMonth td {
  border-top: none;
}
#calendar-nav-buttons td a{
  display: inline-block;
  width: 100%;
  height: 100%;
}

/* PhotoSwipe */
.pswp__button--autoplay { background: none !important; }
.pswp__button--autoplay:before {
  content:"\f04b";
  font-family:"FontAwesome";
  color: #fff;
}
.pswp__button--autoplay.stop { background: none !important; }
.pswp__button--autoplay.stop:before {
  content:"\f04d";
  font-family:"FontAwesome";
  color: #fff;
}

.pswp__button--details { background: none !important; }
.pswp__button--details:before {
  content:"\f129";
  font-family:"FontAwesome";
  color: #fff;
}

.pswp-video-modal {
  background: url(img/play-circle-white.png) no-repeat center center;
  background-size: 128px 128px;
  height: 100%;
  width: 320px;
  margin: 0 auto;
  cursor: pointer;
}
.pswp-video-modal video {
  visibility: hidden;
}
.pswp--touch .pswp__share-tooltip a { padding: 10px 12px; }

.pswp__ui--fit .pswp__top-bar, .pswp__ui--fit .pswp__caption,
.pswp__top-bar, .pswp__caption {
  background-color: rgba(0, 0, 0, 0.8);
}
.pswp__ui--idle .pswp__caption { opacity: 0; }
@media (min-width: 768px) {
  .pswp__caption__center {
    max-width: 640px;
  }
}
.pswp__caption__center ul {
  margin: 0;
  padding: 0;
}
.pswp__caption__center li {
  padding: 0;
  display: inline-block;
  color: #666;
  line-height: 12px;
}
.pswp__caption__center li em {
  font-size: 10px;
  line-height: 12px;
}
@media (min-width: 768px) {
  .pswp__caption__center li em {
    font-size: 12px;
    line-height: 14px;
  }
}
a.pswp__share--google:hover { 
  background: #03a9f4;
￼ color: #fff;
}

/* Wells */
.well-categories { margin-bottom: 10px; }

/* Sidebar */
#sidebar { z-index: 100; }

/* Video */
video[poster] { object-fit: cover; }

/*
 * Plugin fixlets
 */

/* Openstreetmap Plugin fixlets */
.pwg-icon-globe {
  font-family: none !important;
  line-height: none !important;
}
.pwg-icon-globe:before {
  content:"\e135";
  font-family:"Glyphicons Halflings";
}

/* BatchDownloader */
.batch-downloader-icon {
  background: none !important;
  font-family: none !important;
  line-height: none !important;
}
.batch-downloader-icon:before {
  content:"\e197";
  font-family:"Glyphicons Halflings";
}

